cleaned up images

--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
 https://www.figma.com/file/OUNKVfZkidxwkxhlG3v5sY/Website?node-id=17%3A0
+
+the visual assets to the individual projects in my portfolio can be found under "Work Documentation". The format of the individual project pages will remain the same - navigation on the left with the content formatted as it currently is for each page. You should be able to navigate to the homepage and each other individual page from any other project page
+
+
